<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/consumeItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_consume"/>
    <item
        android:id="@+id/updateStateItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_update"/>
    <item
        android:id="@+id/unconsumeItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_unconsume"/>
    <item
        android:id="@+id/editItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_edit"/>
    <item
        android:id="@+id/cloneItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_clone"/>
    <item
        android:id="@+id/deleteItem"
        android:onClick="onMenuItemClick"
        android:title="@string/menuitem_main_delete"/>
</menu>